crates/rd2qmd-cli/tests/snapshots/inline_boundaries__GridTable_List.snap
---
source: crates/rd2qmd-cli/tests/inline_boundaries.rs
expression: visible_spaces
---
# Spaces

## Description

A _foo_ B.

A **bar** B.

A **_nested_** B.

A[ _linked_ ](https://example.com)B.

A _`x | y`_ B.

A B.

- **_label_**

  Label body.

- &#8203;

  Empty label body.

## Arguments

+----------+------------------------------+
| Argument | Description                  |
+==========+==============================+
| `x`      | A *foo* B.                   |
|          |                              |
|          | A ***nested*** B.            |
|          |                              |
|          | - ***term***                 |
|          |                              |
|          |   Argument body.             |
|          | - &#8203;                    |
|          |                              |
|          |   Empty argument label body. |
+----------+------------------------------+
