crates/rd2qmd-cli/tests/snapshots/inline_boundaries__ListTable_DefinitionList.snap
---
source: crates/rd2qmd-cli/tests/inline_boundaries.rs
expression: visible_spaces
---
# Spaces

## Description

A _foo_ B.

A **bar** B.

A **_nested_** B.

A[ _linked_ ](https://example.com)B.

A _`x | y`_ B.

A B.

 _label_␠
:   Label body.

&#8203;
:   Empty label body.

## Arguments

::: {.list-table header-rows=1}

- - Argument
  - Description

- - `x`
  - A *foo* B.

    A ***nested*** B.

    _term_␠
    :   Argument body.

    &#8203;
    :   Empty argument label body.

:::
