crates/rd2qmd-cli/tests/snapshots/inline_boundaries__List_Headings.snap
---
source: crates/rd2qmd-cli/tests/inline_boundaries.rs
expression: visible_spaces
---
# Spaces

## Description

A _foo_ B.

A **bar** B.

A **_nested_** B.

A[ _linked_ ](https://example.com)B.

A _`x | y`_ B.

A B.

###  _label_␠

Label body.

###␠␠

Empty label body.

## Arguments

- **`x`**

  A *foo* B.

  A ***nested*** B.

  ###  _term_

  Argument body.
